--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,9 +18,21 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
+    
+    - name: Verify dependencies
+      run: go mod verify
 
     - name: Build
       run: go build -v ./...
+
+    - name: Run go vet
+      run: go vet ./...
+
+    - name: Install staticcheck
+      run: go install honnef.co/go/tools/cmd/staticcheck@latest
+
+    - name: Run staticcheck
+      run: staticcheck ./...
 
     - name: Test Raft with Snapshotting
       run: make test-raft-snapshotting
