--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Vscode settings
+/.vscode
+
+# Goland settings
+/.idea
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
