--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,15 +36,8 @@ jobs:
 
     - name: Test Raft with Snapshotting
       run: make test-snapshotting
-      continue-on-error: true
+      continue-on-error: false
 
     - name: Test Raft without Snapshotting
       run: make test
-      continue-on-error: true
-
-    - name: Check Test Results
-      run: |
-        if [ ${{ job.status }} == 'failure' ]; then
-          echo "Tests failed. Exiting with a non-zero status code."
-          exit 1
-        fi
+      continue-on-error: false
