--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.19
+          go-version: '1.20'
 
       - name: Install gofumpt
         run: go install mvdan.cc/gofumpt@latest
